--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -452,15 +452,19 @@
 							<StackPanel
 								Orientation="Horizontal"
 								Margin="0,0,0,0">
-								<Label
-									Content="{x:Static res:OptionsRes.LoggingVerbosityLabel}" HorizontalAlignment="Left" VerticalAlignment="Center" />
+								<TextBlock
+									Text="{x:Static res:OptionsRes.LoggingVerbosityLabel}" HorizontalAlignment="Left" VerticalAlignment="Center" />
 								<ComboBox
-									Height="23" HorizontalAlignment="Left" SelectedValue="{Binding LogVerbosity}" SelectedValuePath="Content" VerticalAlignment="Center" Width="42">
+									Height="23" HorizontalAlignment="Left" SelectedValue="{Binding LogVerbosity}" SelectedValuePath="Content" VerticalAlignment="Center" Width="42" Margin="6,0,0,0">
 									<ComboBoxItem Content="0" />
 									<ComboBoxItem Content="1" />
 									<ComboBoxItem Content="2" />
 								</ComboBox>
 							</StackPanel>
+							<CheckBox Margin="0,6,0,0" Content="{x:Static res:OptionsRes.CopyLogToOutputFolderLabel}" IsChecked="{Binding CopyLogToOutputFolder}" />
+							<Button
+								Margin="0,8,0,0" HorizontalAlignment="Left" Padding="3"
+								Content="{x:Static res:OptionsRes.OpenLogFolderButton}" Command="{Binding OpenLogFolderCommand}" />
 						</StackPanel>
 
 						<!-- DVD reading -->
