Added ability to automatically resume the queue when restarting VidCoder. If the encode ends with an error and the worker process is still running, we kill it.
--HG--
branch : beta

--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -392,6 +392,10 @@
 								Content="{x:Static res:OptionsRes.DeleteSourceAfterCompletionCheckBox}"
 								IsChecked="{Binding DeleteSourceFilesOnClearingCompleted}"
 								HorizontalAlignment="Left" Margin="0,6,0,0" VerticalAlignment="Center" />
+							<CheckBox
+								Content="{x:Static res:OptionsRes.ResumeEncodingOnRestartCheckBox}"
+								IsChecked="{Binding ResumeEncodingOnRestart}"
+								HorizontalAlignment="Left" Margin="0,6,0,0" VerticalAlignment="Center"/>
 							<Grid Margin="0,6,0,0">
 								<Grid.ColumnDefinitions>
 									<ColumnDefinition Width="Auto" />
