--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -410,7 +410,7 @@
 									Grid.Column="0" HorizontalAlignment="Left" Text="{x:Static res:OptionsRes.RecognizedExtensionsLabel}" VerticalAlignment="Center"
 									ToolTip="{x:Static res:OptionsRes.RecognizedExtensionsToolTip}" />
 								<TextBox 
-									Grid.Column="1" Height="23" Margin="6,0,9,0" VerticalAlignment="Center" Text="{Binding VideoFileExtensions}" VerticalContentAlignment="Center"/>
+									Grid.Column="1" Height="23" Margin="6,0,9,0" VerticalAlignment="Center" Text="{Binding VideoFileExtensions}" VerticalContentAlignment="Center" ToolTip="{x:Static res:OptionsRes.RecognizedExtensionsToolTip}"/>
 							</Grid>
 							<StackPanel Orientation="Horizontal" Margin="0,6,0,0">
 								<TextBlock Text="{x:Static res:OptionsRes.WorkerProcessPriorityLabel}" VerticalAlignment="Center" />
