--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -849,12 +849,12 @@
 
 			<Button
 				Grid.Column="1"
-				Height="22" Margin="10,9,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"
+				Margin="10,8,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"
 				Visibility="{Binding OutputPathVM.OutputFolderChosen, Converter={StaticResource VisibilityConverter}, ConverterParameter=True}"
 				Command="{Binding OutputPathVM.PickDefaultOutputFolderCommand}">
-				<StackPanel Orientation="Horizontal" Margin="4,0">
-					<Image Source="/Icons/win7foldericon.png" />
-					<TextBlock Text="{x:Static res:MainRes.SelectOutputPathButton}" Margin="7,0,0,0" />
+				<StackPanel Orientation="Horizontal" Margin="4,2">
+					<Image Source="/Icons/win7foldericon.png" Width="16" Height="16" />
+					<TextBlock Text="{x:Static res:MainRes.SelectOutputPathButton}" Margin="7,0,0,0" VerticalAlignment="Center" />
 				</StackPanel>
 			</Button>
 
