--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -1157,7 +1157,7 @@
 				
 				<Border
 					VerticalAlignment="Bottom" HorizontalAlignment="Right" BorderThickness="1,1,0,0" BorderBrush="DarkGray" CornerRadius="4,0,0,0"
-					Name="statusText">
+					Name="statusText" Visibility="Collapsed">
 					<Border.Background>
 						<LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
 							<GradientStop Color="White" Offset="0.0" />
