Added option to pick basic x264 settings or advanced x264 settings. Advanced tab is hidden until it's enabled.
--HG--
branch : beta

--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -170,7 +170,9 @@
 			<TabItem Header="{x:Static res:EncodingRes.TabHeader_Audio}">
 				<view:AudioPanel DataContext="{Binding AudioPanelViewModel}" />
 			</TabItem>
-			<TabItem Header="{x:Static res:EncodingRes.TabHeader_Advanced}">
+			<TabItem 
+				Header="{x:Static res:EncodingRes.TabHeader_Advanced}" 
+				Visibility="{Binding VideoPanelViewModel.UseAdvancedTab, Converter={StaticResource VisibilityConverter}}">
 				<view:AdvancedPanel DataContext="{Binding AdvancedPanelViewModel}" />
 			</TabItem>
 		</TabControl>
