Fixed crash in number box. Added a couple strings to their resource file. Gave more room for blu-ray titles in Queue Multiple Titles dialog. We now use the param_unparse function when switching from Basic -> Advanced x264 Switch automatically to Advanced tab when changing Basic -> Advanced Updated HandBrake core to SVN 5678
--HG--
branch : beta

--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -157,7 +157,7 @@
 
 
 
-		<TabControl Margin="0,73,0,0" Name="tabControl">
+		<TabControl Margin="0,73,0,0" Name="tabControl" SelectedIndex="{Binding SelectedTabIndex}">
 			<TabItem Header="{x:Static res:EncodingRes.TabHeader_Picture}">
 				<view:PicturePanel DataContext="{Binding PicturePanelViewModel}"/>
 			</TabItem>
