--- a/VidCoder/View/Panels/AudioPanel.xaml
+++ b/VidCoder/View/Panels/AudioPanel.xaml
@@ -353,7 +353,7 @@
 							<TextBlock
 								HorizontalAlignment="Left" VerticalAlignment="Top" Margin="2,0,0,0"
 								Style="{StaticResource SectionHeader}"
-								Text="Output" />
+								Text="{x:Static res:EncodingRes.OutputLabel}" />
 							<StackPanel Orientation="Vertical" Margin="0,20,0,0">
 								<TextBlock
 									Text="{x:Static res:EncodingRes.NoTracksPlaceholder}"
